soporte js,css en el mismo paquete ,main layout y hooks js